kubernetes/apps/development/harbor/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
spec:
  hostnames:
    - "harbor.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: harbor
          port: 80
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 600s
